# pism-emulator

./: .pre-commit-config.yaml  README.md  VERSION  environment-cuda.yml  environment.yml  plot-emulator.py  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
.circleci/: config.yml
calibration/: calibrate-as19-with-resampling.py  calibrate-as19.py  calibrate-ismip6-ensemble.ipynb  calibrate-ismip6.ipynb  calibrate.ipynb  imbie_greenland_2021_Gt.csv
dem/: Julia-SVD.ipynb  svd_dem_interpolation.py  svd_dem_interpolation_simple.py
examples/: emulate_as19.py
kyle_calibration/: Aggregate_Plots.ipynb  Plot_By_Training_Points.ipynb  Seaborn_groups.ipynb
notebooks/: debm_numpy.ipynb  debm_pism.ipynb  gpy_kernel_cheatsheet.ipynb  minimal_example.ipynb  pdd.ipynb  pdd_emulator.ipynb  pdd_synth.ipynb
pddemulator/: comp_pdd.py  plot_pdd_posterior.py  plot_posterior.py  sample_posterior.py  sample_posterior_pdd.py  train_emulator.py  train_emulator_stddev.py
pddsampler/: plot_pdd_posterior.py  sample_posterior_pdd.py
pism_emulator/: __init__.py  datamodules.py  datasets.py  metrics.py  models.py  nnemulator.py  utils.py
pismemulator/: __init__.py  acceptance.py  chain.py  datamodules.py  datasets.py  emulate.py  gpemulator.py  kyle_utils.py  metrics.py  models.py  nnemulator.py  optimizer.py  probmodel.py  sampler.py  svdinterpolation.py  utils.py
slremulator/: analyze-emulate.py  as19_pdfs.py  compare_as19_vs_true.py  create_slurm_loo.sh  evaluate_emulators.py  evaluate_loo.py  evaluate_loo_dp16.py  gpy-vs-torch.py  mc3_vs_gpy.py  run_as19_validation.py  run_convergence.py  run_emulator.py  run_emulators.py  run_prognostic.py  run_slr_emulation.ipynb  run_validation_loo.py  run_validation_loo_dp16.py  sle_likelihood.py  submit_slurm_loo.sh  test_gpytorch.py
slrtarget/: estimate_slr_target.ipynb
speedemulator/: Julia-Emulator.ipynb  Julia-Sampler.ipynb  README.md  absolute_error_metric.ipynb  compare_cdo_pca.ipynb  create_eofs_cdo.sh  dataloader_example.py  evaluate_emulator.py  hydrology_surrogate_construction_and_mcmc.ipynb  minimal_example.ipynb  pism_surrogate_construction_and_mcmc.ipynb  pl_train_emulator.py  plot_posterior.py  plot_posterior_csv.py  plot_speed_posterior.py  prepare_training_data.py  run_emulator.py  run_pca.ipynb  sample_posterior.py  sample_posterior_mcmc.py  sample_posterior_new.py  sample_posterior_p.py  test_ml.ipynb  (+5 more)
(+1447 files in other folders)
